# fuel_transactions

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  env.example
migrations/: 20240903000001_add_ moddatetime_extension.down.sql  20240903000001_add_ moddatetime_extension.up.sql  20240903000002_create-transactions-table.down.sql  20240903000002_create-transactions-table.up.sql
src/: dto.rs  handler.rs  lib.rs  main.rs  router.rs
src/config/: mod.rs
src/repository/: mod.rs  models.rs
src/repository/implementations/: mock.rs
src/repository/implementations/postgr/: mod.rs
src/system_models/: errors.rs  mod.rs  success.rs
