[package]
name = "fuel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
axum = "^0.7.5"
chrono = { version = "^0.4.38", features = ["serde"] }
rust_decimal = "^1.36.0"
serde = { version = "^1.0.209", features = ["derive"] }
serde_json = "^1.0.127"
sqlx = { version = "^0.8.1", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "rust_decimal"] }
tokio = { version = "^1.39.3", features = ["full"] }
tower-http = { version = "^0.5.2", features = ["fs", "trace"] }
uuid = { version = "^1.10.0", features = ["serde", "v4"] }

[lints.clippy]
needless_return = "allow"
